tools/clang/test/zapcc/multi/include-depend/include-depend.lst
// RUN: %zapccxx -fsyntax-only %S/file1.cpp 2>&1 | tee %t.txt
// RUN: FileCheck -input-file=%t.txt %s -check-prefix=CHECK-COMPILE --allow-empty
// CHECK-COMPILE-NOT: note: system {{.*}} was removed
// CHECK-COMPILE-NOT: error:
// CHECK-COMPILE-NOT: Assertion
// Bug 1262
